[gd_scene load_steps=26 format=3 uid="uid://cs5oiq1x3k0wj"]

[ext_resource type="Script" path="res://Scripts/wall_hitbox.gd" id="1_8ypco"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_t5yli"]
[ext_resource type="Script" path="res://Scripts/Assasin.gd" id="2_io4e7"]
[ext_resource type="PackedScene" uid="uid://bi6dep84ir1yg" path="res://Scenes/red_bullet.tscn" id="3_uby1e"]
[ext_resource type="Script" path="res://Scripts/boss_hitbox.gd" id="4_h7g7r"]
[ext_resource type="Script" path="res://Scripts/collisionpolygon2d.gd" id="5_1do8l"]
[ext_resource type="Script" path="res://Scripts/RegularPolygonCreator.gd" id="6_bcmbr"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="7_htyhn"]
[ext_resource type="Shader" path="res://BossShader.gdshader" id="8_8enan"]
[ext_resource type="PackedScene" uid="uid://dvbnhvgg8y6pf" path="res://Scenes/friendly_bullet.tscn" id="8_uqv35"]
[ext_resource type="Script" path="res://Scripts/player_hitbox.gd" id="9_tgdmk"]
[ext_resource type="Texture2D" uid="uid://v40id4l2cnin" path="res://Assets/PlayerHitbox.png" id="10_l1x1p"]
[ext_resource type="Shader" path="res://PlayerShader.gdshader" id="11_cqfj8"]
[ext_resource type="Script" path="res://Scripts/health_bar.gd" id="11_qgxxr"]
[ext_resource type="Script" path="res://Scripts/Energy.gd" id="12_0j8vk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8rrj"]
shader = ExtResource("8_8enan")
shader_parameter/flash_color = Color(0, 0, 0, 1)
shader_parameter/flash_opacity = null
shader_parameter/attack_color = Color(1, 0, 1, 1)
shader_parameter/intensity = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l5bmb"]
shader = ExtResource("11_cqfj8")
shader_parameter/flash_color = Color(0, 0, 0, 1)
shader_parameter/flash_opacity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40doy"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hy8fw"]
size = Vector2(12, 12.1088)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vaio7"]
shader = ExtResource("11_cqfj8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_opacity = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxotv"]
bg_color = Color(0.41598, 0.41598, 0.41598, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05ov3"]
bg_color = Color(0, 1, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iscer"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8t4bv"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37jon"]
bg_color = Color(6.54578e-06, 0.644681, 0.917506, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_t5yli")

[node name="Background2" type="Polygon2D" parent="."]
position = Vector2(0, -3.99994)
scale = Vector2(1, 0.982081)
color = Color(0.162066, 0.162066, 0.162066, 1)
polygon = PackedVector2Array(50, 50, 1870, 50, 1870, 1050, 50, 1050)

[node name="Background1" type="Polygon2D" parent="." groups=["boss"]]
position = Vector2(-1, 1)
scale = Vector2(1, 0.991)
color = Color(0, 0, 0, 1)
invert_enabled = true
polygon = PackedVector2Array(50, 50, 1870, 50, 1870, 1030, 50, 1030)

[node name="StaticBody2D" type="StaticBody2D" parent="Background1"]
position = Vector2(-1877, -425.832)
scale = Vector2(1, 0.991)
collision_layer = 15
collision_mask = 15

[node name="WallCollission" type="CollisionPolygon2D" parent="Background1/StaticBody2D"]
position = Vector2(1878, 428.682)
scale = Vector2(1, 1.01825)
polygon = PackedVector2Array(50, 60, 1860, 60, 1860, 1020, 60, 1019, 60, 60, 50, 60, 49, 1030, 1878, 1030, 1869, 49, 50, 50)

[node name="WallHitbox" type="Area2D" parent="Background1" groups=["boss"]]
script = ExtResource("1_8ypco")

[node name="WallCollission" type="CollisionPolygon2D" parent="Background1/WallHitbox"]
scale = Vector2(1, 1.01825)
polygon = PackedVector2Array(-391, -426.128, 2406, -393.425, 2506, 1383.43, -500, 1426.04, -410, -831.446, -981, -812.617, -933, 1756.05, 2858, 1779.83, 2849, -983.068, -377, -831.446)

[node name="Boss" type="CharacterBody2D" parent="." groups=["boss"]]
position = Vector2(960, 540)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_io4e7")
Bullet = ExtResource("3_uby1e")
Health = 5000

[node name="Hitbox" type="Area2D" parent="Boss" groups=["boss"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("4_h7g7r")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boss/Hitbox"]
script = ExtResource("5_1do8l")
n = 3
r = 50

[node name="Polygon2DOutline" type="Polygon2D" parent="Boss"]
color = Color(0, 0, 0, 1)
script = ExtResource("6_bcmbr")
n = 3
r = 60

[node name="Polygon2D" type="Polygon2D" parent="Boss/Polygon2DOutline"]
material = SubResource("ShaderMaterial_v8rrj")
color = Color(0.894118, 0, 0.537255, 1)
script = ExtResource("6_bcmbr")
n = 3
r = 50

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boss"]
script = ExtResource("5_1do8l")
n = 3
r = 50

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(1400, 540)
motion_mode = 1
script = ExtResource("7_htyhn")
Attack = ExtResource("8_uqv35")

[node name="PlayerBorder" type="Polygon2D" parent="Player"]
position = Vector2(-15, -15)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-5, -5, 35, -5, 35, 35, -5, 35)

[node name="PlayerInside" type="Polygon2D" parent="Player/PlayerBorder"]
material = SubResource("ShaderMaterial_l5bmb")
color = Color(0.466667, 1, 1, 1)
polygon = PackedVector2Array(0, 0, 30, 0, 30, 30, 0, 30)

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
visible = false
shape = SubResource("RectangleShape2D_40doy")

[node name="PlayerHitbox" type="Area2D" parent="Player" groups=["player"]]
scale = Vector2(1, 0.991)
collision_layer = 7
collision_mask = 7
script = ExtResource("9_tgdmk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerHitbox"]
position = Vector2(0, 6.10352e-05)
shape = SubResource("RectangleShape2D_hy8fw")

[node name="HitboxSprite" type="Sprite2D" parent="Player"]
material = SubResource("ShaderMaterial_vaio7")
texture = ExtResource("10_l1x1p")

[node name="Wall1" type="Polygon2D" parent="."]
polygon = PackedVector2Array(50, 50, 1870, 50, 1870, 60, 50, 60)

[node name="Wall2" type="Polygon2D" parent="."]
polygon = PackedVector2Array(1860, 50, 1870, 50, 1870, 1030, 1860, 1030)

[node name="Wall3" type="Polygon2D" parent="."]
polygon = PackedVector2Array(50, 50, 60, 50, 60, 1030, 50, 1030)

[node name="Wall4" type="Polygon2D" parent="."]
polygon = PackedVector2Array(50, 1020, 1870, 1020, 1870, 1030, 50, 1030)

[node name="PlayerHealth" type="ProgressBar" parent="."]
offset_left = 72.0
offset_top = 21.0
offset_right = 472.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_lxotv")
theme_override_styles/fill = SubResource("StyleBoxFlat_05ov3")
value = 100.0
show_percentage = false
script = ExtResource("11_qgxxr")

[node name="BossHealth" type="ProgressBar" parent="."]
offset_left = 570.0
offset_top = 980.0
offset_right = 1350.0
offset_bottom = 996.0
theme_override_styles/background = SubResource("StyleBoxFlat_iscer")
theme_override_styles/fill = SubResource("StyleBoxFlat_8t4bv")
max_value = 10000.0
value = 100.0
show_percentage = false
script = ExtResource("11_qgxxr")

[node name="ENBar" type="ProgressBar" parent="."]
offset_left = 501.0
offset_top = 21.0
offset_right = 901.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_lxotv")
theme_override_styles/fill = SubResource("StyleBoxFlat_37jon")
max_value = 400.0
value = 100.0
show_percentage = false
script = ExtResource("12_0j8vk")

[node name="Polygon2D" type="Polygon2D" parent="ENBar"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(99, 0, 101, 0, 101, 12, 99, 12)

[node name="Polygon2D2" type="Polygon2D" parent="ENBar"]
position = Vector2(100, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(99, 0, 101, 0, 101, 12, 99, 12)

[node name="Polygon2D3" type="Polygon2D" parent="ENBar"]
position = Vector2(200, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(99, 0, 101, 0, 101, 12, 99, 12)
